<resources>
    <string name="app_name">Skyblue</string>
    <string name="watch_your_favorite_videos_and_movies">Watch your favorite videos and movies</string>
    <string name="get_started">GET STARTED</string>
    <string name="camera_permission_denied">Camera Permission Denied</string>
    <string name="permissions">Permissions</string>
    <string name="storage">Storage</string>
    <string name="get_start_storage_permission">User can upload videos and movies files to over the app. we need storage permission to handle the action perform.</string>
    <string name="camera">Camera</string>
    <string name="get_start_camera_permission">Purpose for app user use the camera feature for update profile picture and cover picture.</string>
    <string name="user_information">User information</string>
    <string name="get_start_user_info_permission">We collect your personal data such as mobile no, country , region, gender, age, our application searching history for providing better use.</string>
    <string name="continue_">Continue</string>
    <string name="current_logged_user_profile_picture">Current logged user profile picture</string>
    <string name="storage_permission">Storage permission</string>
    <string name="camera_permission">Camera permission</string>
    <string name="user_info_permission">User info permission</string>
    <string name="search_videos_movies_songs">Search videos, movies, songs</string>
    <string name="check_internet_connection">Check internet connection</string>
    <string name="oops_unable_to_load">Oops unable to load</string>
    <string name="_1_check_mobile_data_connection">1, Check mobile data connection</string>
    <string name="_2_check_wifi_connection">2, Check wifi connection</string>
    <string name="_3_please_turn_on_mobile_data">3, Please turn on mobile data</string>
    <string name="_4_restart_the_skyblue_app">4, Restart the skyblue app</string>
    <string name="please_select_primary_channel_to_upload_videos_">Please select primary channel to upload videos, create favorite playlist, monetization your video. manage comments and likes</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="account">Account</string>
    <string name="channels">Channels</string>
    <string name="search">&#160; Search</string>
    <string name="please_select_channel_to_upload">Please select channel to upload</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="tamil">Tamil</string>
    <string name="hindi">Hindi</string>
    <string name="seconds_ago">&#160; seconds ago</string>
    <string name="minutes_ago">&#160; minutes ago</string>
    <string name="hours_ago">&#160; hours ago</string>
    <string name="days_ago">&#160; days ago</string>
    <string name="uploaded_on">Uploaded on :</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="views">VIEWS</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="post_your_comment">Post your comment..</string>
    <string name="sign_in">Sign In</string>
    <string name="mobile_no">Mobile No</string>
    <string name="enter_mobile">Enter mobile</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="enter_password">Enter Password</string>
    <string name="check_username_and_password">Check Username And Password!</string>
    <string name="account_not_found">Account not found</string>
    <string name="please_enter_empty_field">Please Enter Empty Field</string>
    <string name="success">success</string>
    <string name="firebase_token_updated">Firebase token updated</string>
    <string name="server_error_db">Server error! DB</string>
    <string name="failed">Failed!</string>
    <string name="logging_in_please_wait">Logging In.. Please wait…</string>
    <string name="phone_cannot_be_empty">Phone cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="follow">FOLLOW</string>
    <string name="phone_number">Phone number</string>
    <string name="log_in">LOG IN</string>
    <string name="Forgot_your_password_text">Forgot your password?</string>
    <string name="forget_password">Forget Password</string>
    <string name="logging_success_please_wait">Logging In Success.. Please wait…</string>
    <string name="please_wait_initializing">Please wait initializing…</string>
    <string name="try_again">Try again</string>
    <string name="please_wait___">Please wait…</string>
    <string name="item_12">&#160; Search</string>
    <string name="text_photos">Photos</string>
    <string name="text_videos">Videos</string>
    <string name="select_image">Select image</string>
    <string name="select_video">Select video</string>
    <string name="post_video">Post video</string>
    <string name="write_something">Write a something</string>
    <string name="cancel">Cancel</string>
    <string name="set_tag" translatable="false">Set tag</string>
    <string name="cinema" translatable="false">CINEMA</string>
    <string name="love" translatable="false">LOVE</string>
    <string name="status" translatable="false">STATUS</string>
    <string name="comedy" translatable="false">COMEDY</string>
    <string name="news_political" translatable="false">NEWS / POLITICAL</string>
    <string name="other" translatable="false">OTHER</string>
    <string name="who_can_see_my_post">Who can see my post</string>
    <string name="publicc">Public</string>
    <string name="post">Post</string>
    <string name="discard">Discard</string>
    <string name="valid_number_is_required">Valid number is required</string>
    <string name="enter_verification_code">Enter OTP Verification Code</string>
    <string name="code_will_be_detected_automatically" translatable="false">code will be detected automatically but if it is not detected you can put it below manually as well</string>
    <string name="enter_code">Enter code</string>
    <string name="verify">VERIFY</string>
    <string name="checking_otp_please_wait">Checking OTP.. Please wait…"</string>
    <string name="please_enter_correct_otp">Please Enter Correct OTP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change password</string>
    <string name="valid_password_required">Valid Password is required</string>
    <string name="valid_confirm_password_required">Valid Confirm Password is required</string>
    <string name="password_has_been_changed_successfully">PASSWORD HAS BEEN CHANGED SUCCESSFULLY</string>
    <string name="back">Back</string>
    <string name="already_registered_this_number_please_login">Already registered! Please login.</string>
    <string name="next">NEXT</string>
    <string name="set_password">Set Password</string>
    <string name="valid_password_is_required">Valid Password is required</string>
    <string name="valid_confirm_password_is_required">Valid Confirm Password is required</string>
    <string name="password_and_confirm_password_dose_not_match">Password  and confirm password does not match</string>
    <string name="name">Name</string>
    <string name="select_date_of_birth">Select Date Of Birth</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_state">Select state</string>
    <string name="select_city">Select city</string>
    <string name="privacy_one">By clicking Sign Up , you agree to our </string>
    <string name="privacy_two">Terms And, Data</string>
    <string name="privacy_three">Policy</string>
    <string name="privacy_four">and</string>
    <string name="privacy_five"> Cookie Policy</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_enter_name">Pls Enter Name</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="signing_up_please_wait">Signing Up.. Please wait…</string>
    <string name="set_profile_picture">Set Profile Picture</string>
    <string name="skip">SKIP</string>
    <string name="please_wait">Please wait…</string>
    <string name="photos">Photos</string>
    <string name="profile_updated">Profile updated</string>
    <string name="loading___">Loading…</string>
    <string name="download_started">Download started</string>
    <string name="init_add_friends"> Add minimum 5 friends</string>
    <string name="folderName" translatable="false">Folder Name</string>
    <string name="appName" translatable="false">Simple Image Gallery</string>
    <string name="empty">No Images on this device</string>
    <string name="photos_name">Photos</string>
    <string name="channel_name" translatable="false">Akila</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading_please_wait">Loading please wait</string>
    <string name="channel_description" translatable="false">This is a test channel at level a high level, where lights, sound, and vibration are active.</string>
    <string name="channel_name2" translatable="false">Test Channel 2</string>
    <string name="channel_description2" translatable="false">This is a test channel at level a medium, where lights, sound, and vibration are active.</string>
    <string name="channel_name3" translatable="false">Test Channel 3</string>
    <string name="channel_description3" translatable="false">This is a test channel at level a Emergency level, where lights, sound, and vibration are active.</string>
    <string name="create_an_acccount">Create an account</string>
    <string name="my_chennal" translatable="false">My chennal</string>
    <string name="earnings" translatable="false">Earnings</string>
    <string name="live" translatable="false">Live</string>
    <string name="please_wait_dot_dot">Please wait…</string>
    <string name="download_from_skyblue_app" translatable="false">Downloaded from Skyblue app</string>
    <string name="watch" translatable="false">Watch</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="message">Message</string>
    <string name="close">CLOSE</string>
    <string name="enter_name">Enter name</string>
    <string name="set_now">SET NOW</string>
    <string name="set_profile">Set profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="my_picture">My Picture</string>
    <string name="my_page">My Page</string>
    <string name="manage_uploaded_picture">Manage uploaded picture</string>
    <string name="create_page_manage_page">Create page. manage page</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="my_videos">My Videos</string>
    <string name="manage_uploaded_videos">Manage uploaded videos</string>
    <string name="my_photos">My Photos</string>
    <string name="manage_uploaded_photos">Manage uploaded photos</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="dob">dob</string>
    <string name="mobile">Mobile</string>
    <string name="todo">TODO</string>
    <string name="cover_image">Cover image</string>
    <string name="profile_image">Profile image</string>
    <string name="manage_channel">Manage channel</string>
    <string name="change_channel_name">Change channel name</string>
    <string name="delete_channel">Delete channel</string>
    <string name="no_videos_please_upload_videos">No videos. Please upload videos</string>
</resources>