<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.CommonAccountDashboard">
    <RelativeLayout
        android:id="@+id/cover_con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/cover_con_2"
            android:layout_width="match_parent"
            android:layout_height="128dp">

            <ImageView
                android:id="@+id/cover_image_view"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_alignParentTop="true"
                android:background="@drawable/cover_bg_gradient"
                android:scaleType="centerCrop"
                android:contentDescription="@string/cover_image" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/profile_con"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp">

            <ImageView
                android:id="@+id/profile_image_view"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/placeholder_person2"
                android:contentDescription="@string/profile_image" />
        </RelativeLayout>

        </RelativeLayout>

        <ImageView
            android:id="@+id/id_back"
            android:layout_width="35dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/arrow_back"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:tint="@color/white"
            android:contentDescription="@string/back" />


</RelativeLayout>