<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.account.MyVideoListActivity">


    <RelativeLayout
        android:id="@+id/top_nav_main"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="false"
        android:background="@color/colorPrimaryBlue">


        <ImageView
            android:id="@+id/video_grid_back_btn"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_centerInParent="false"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/arrow_back"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/video_grid_back_btn"
            android:text="@string/my_videos"
            android:textColor="#FFFFFF"
            android:textSize="17dp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_no_videos_expet_handling"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="52dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_videos_please_upload_videos"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progrress_bar_circle_custom" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:scrollbars="none" />

    <RelativeLayout
        android:id="@+id/error_load_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="45dp"
        android:visibility="gone">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/internet_no_connection"
                        app:tint="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/oops_unable_to_load"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">



                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_1_check_mobile_data_connection"
                            android:textColor="@color/grey"
                            android:layout_marginTop="2dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_2_check_wifi_connection"
                            android:textColor="@color/grey"
                            android:layout_marginTop="2dp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_3_please_turn_on_mobile_data"
                            android:textColor="@color/grey"
                            android:layout_marginTop="2dp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_4_restart_the_skyblue_app"
                            android:textColor="@color/grey"
                            android:layout_marginTop="2dp"
                            />

                    </LinearLayout>
                </RelativeLayout>


            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>