<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".account.AccountProfileEditActivity">

    <RelativeLayout
        android:id="@+id/top_nav"
        android:layout_width="match_parent"
        android:layout_height="50dp">


        <ImageView
            android:id="@+id/id_back"
            android:layout_width="35dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/common_arrow_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/id_back"
            android:fontFamily="@font/open_sans"
            android:text="@string/profile"
            android:textColor="#000000"
            android:textSize="20dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Relative_About"
        android:layout_width="match_parent"
        android:layout_below="@id/top_nav"
        android:layout_marginStart="5dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/id_iVEdit_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/edit"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/colorPrimaryBlue"
            android:textSize="15dp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView

            android:id="@+id/id_iVEdit_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_gender_text"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/edit"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/colorPrimaryBlue"
            android:textSize="15dp"
            android:textStyle="bold"
            android:visibility="visible" />

        <ImageView

            android:id="@+id/id_iVEdit_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_dob_text"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_lock_black_35dp"
            tools:visibility="visible" />


        <TextView
            android:id="@+id/textGender"
            android:layout_width="78dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="false"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textDob"
            android:layout_width="150dp"

            android:layout_height="25dp"
            android:layout_below="@id/id_gender_text"
            android:layout_alignParentRight="false"
            android:fontFamily="@font/open_sans"
            android:layout_marginLeft="5dp"
            android:text="@string/date_of_birth"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textMobile"
            android:layout_width="150dp"

            android:layout_height="25dp"
            android:layout_below="@id/id_dob_text"
            android:layout_alignParentRight="false"
            android:fontFamily="@font/open_sans"
            android:layout_marginLeft="5dp"
            android:text="@string/mobile_number"
            android:textColor="@color/black"
            android:textSize="15dp" />


        <TextView
            android:id="@+id/id_gender_text"
            android:layout_width="match_parent"

            android:layout_height="25dp"
            android:layout_below="@id/textGender"
            android:layout_alignParentRight="false"
            android:fontFamily="@font/open_sans"
            android:layout_marginLeft="10dp"
            android:text="@string/gender"
            android:textColor="@color/company_search_light_dark"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/id_dob_text"
            android:layout_width="match_parent"

            android:layout_height="25dp"
            android:layout_below="@id/textDob"
            android:layout_alignParentRight="false"
            android:fontFamily="@font/open_sans"
            android:layout_marginLeft="10dp"
            android:text="@string/dob"
            android:textColor="@color/company_search_light_dark"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/id_mobile_text"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@id/textMobile"
            android:layout_alignParentRight="false"
            android:layout_marginLeft="10dp"
            android:text="@string/mobile"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/company_search_light_dark"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/id_mobile_hidden_star"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@id/textMobile"
            android:layout_alignParentRight="false"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/open_sans"
            android:text="*************"
            android:textColor="#000000"
            android:textSize="15dp"
            android:visibility="invisible"
            tools:visibility="invisible" />


    </RelativeLayout>


</RelativeLayout>