<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.registration.VerifyPhoneActivity">

    <RelativeLayout
        android:id="@+id/top_nav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        >


        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            app:srcCompat="@drawable/arrow_back"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/backBtn"
            android:fontFamily="@font/open_sans"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/top_nav"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/enter_verification_code"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryBlue"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextCode"
            style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_login"
            android:digits="0123456789"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:hint="@string/enter_code"
            android:inputType="phone"
            android:maxLength="6"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextCode"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorMessageBackground"
            android:fontFamily="@font/open_sans"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>